convert_3do: dump songs to .wav

--- a/tools/convert_3do/Makefile
+++ b/tools/convert_3do/Makefile
@@ -1,5 +1,5 @@
 
-convert_3do: bitmap.o cinepak.o main.o opera.o  util.o
+convert_3do: bitmap.o cinepak.o main.o opera.o util.o wave.o
 	$(CXX) -o $@ $^
 
 clean:
